[package]
name = "super-duper-memory"
version = "0.1.0"
edition = "2024"

# all of the separate bins will be diff executables for benchmarking, 
# but I really dont just want them all in the bin folder, so I will also define them here
# Usage becomes: cargo run --bin [benchmark name]
# which will eventually be some actual build command to a separate build dir from a script, that we can then 
# call from another script.

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "memory"
path = "src/bin/benchmarks/memory.rs"

[[bin]]
name = "time"
path = "src/bin/benchmarks/time.rs"

[[bin]]
name = "cpu"
path = "src/bin/benchmarks/cpu.rs"

[[bin]]
name = "gpu"
path = "src/bin/benchmarks/gpu.rs"

[[bin]]
name = "disk-read"
path = "src/bin/benchmarks/disk-read.rs"

[[bin]]
name = "disk-write"
path = "src/bin/benchmarks/disk-write.rs"

[[bin]]
name = "child-procs"
path = "src/bin/benchmarks/child-procs.rs"

[[bin]]
name = "sys-calls"
path = "src/bin/benchmarks/sys-calls.rs"

# web gpu stuff takes like 2+ minutes to 
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3


[dependencies]
getopts = "0.2"
rand = "0.9"
rayon = "1.10.0"
pollster = "0.4.0"
wgpu = { version = "24.0.0", optional = true }

[features]
gpu = ["wgpu"]